[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUDSinglePlayer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "start_game"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="HUDSinglePlayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "DODGE THE CREEPS!"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.5
margin_top = -200.0
margin_right = 125.5
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "START"

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -95.5
margin_right = 95.5
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "PLAYER1: 0"
align = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MENU" type="Button" parent="."]
anchor_top = 0.128
anchor_right = 0.556
anchor_bottom = 0.128
margin_left = 326.0
margin_top = 598.84
margin_right = 205.12
margin_bottom = 624.84
custom_fonts/font = SubResource( 4 )
text = "BACK TO MENU"

[node name="Settings" type="Button" parent="."]
margin_left = 9.0
margin_top = 690.0
margin_right = 107.0
margin_bottom = 716.0
custom_fonts/font = SubResource( 5 )
text = "SETTINGS"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="MENU" to="." method="_on_MENU_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
